@@ -11,8 +11,12 @@ if (!isGeneric("freq")) {
 
 
 setMethod('freq', signature(x='RasterLayer'), 
-	function(x, digits=0, useNA="ifany", progress='', ...) {
-
+	function(x, digits=0, value=NULL, useNA="ifany", progress='', ...) {
+		
+		if (!is.null(value)) {
+			return(.count(x, value, digits=digits, progress=progress, ...))
+		}
+	
 		if (canProcessInMemory(x, 3)) {
 	
 			d <- round(getValues(x), digits=digits)
@@ -43,8 +47,12 @@ setMethod('freq', signature(x='RasterLayer'),
 
 
 setMethod('freq', signature(x='RasterStackBrick'), 
-	function(x, digits=0, useNA="ifany", merge=FALSE, progress='', ...) {
-		
+	function(x, digits=0, value=NULL, useNA="ifany", merge=FALSE, progress='', ...) {
+
+		if (!is.null(value)) {
+			return(.count(x, value, digits=digits, progress=progress, ...))
+		}
+	
 		nl <- nlayers(x)
 		res <- list()
 		
