@@ -13,14 +13,15 @@ Frequency table of the values of a RasterLayer.
 }
 
 \usage{
-\S4method{freq}{RasterLayer}(x, digits=0, useNA='ifany', progress='', ...)
+\S4method{freq}{RasterLayer}(x, digits=0, value=NULL, useNA='ifany', progress='', ...)
 
-\S4method{freq}{RasterStackBrick}(x, digits=0, useNA='ifany', merge=FALSE, progress='', ...)
+\S4method{freq}{RasterStackBrick}(x, digits=0, value=NULL, useNA='ifany', merge=FALSE, progress='', ...)
 }
 
 \arguments{
   \item{x}{RasterLayer}
   \item{digits}{non-negative integer for rounding the cell values. Argument is passed to \code{\link[base]{round}} }
+  \item{value}{numeric, logical or NA. An optional single value to only count the number of cells with that value}
   \item{useNA}{character. What to do with NA values? Options are "no", "ifany", "always". See to \code{\link[base]{table}} }
   \item{progress}{character to specify a progress bar. Choose from 'text', 'window', or '' (the default, no progress bar)}
   \item{merge}{logical. If \code{TRUE} the list will be merged in a single data.frame}
@@ -31,7 +32,7 @@ Frequency table of the values of a RasterLayer.
 matrix (RasterLayer). List of matrices (one for each layer) or data.frame (if \code{merge=TRUE}) (RasterStack or RasterBrick)
 }
 
-\seealso{ \code{\link[raster]{count}}, \code{\link[raster]{crosstab} } and \code{\link[raster]{zonal} } }
+\seealso{ \code{\link[raster]{crosstab} } and \code{\link[raster]{zonal} } }
 
 
 
